# HydroOS

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
.devcontainer/: Dockerfile  devcontainer.json
FreeRTOS/: CMakeLists.txt
hydros_logger/: CMakeLists.txt
hydros_logger/example/: example.cmake
hydros_logger/example/src/: main.cpp  stm32f4xx_it.c
hydros_logger/include/: hydros_logger.hpp
hydros_logger/src/: hydros_logger.cpp  hydros_logger_threads.cpp
hydros_serial_protocol/: CMakeLists.txt
hydros_serial_protocol/example/: example.cmake
hydros_serial_protocol/example/src/: main.cpp  stm32f4xx_it.c
hydros_serial_protocol/include/: hydros_serial_protocol.hpp
hydros_serial_protocol/src/: hydros_serial_protocol.cpp  hydros_serial_protocol_threads.cpp
hydros_uart/: CMakeLists.txt
hydros_uart/example/: CMakeLists.txt
hydros_uart/example/src/: main.cpp  main_rs485.cpp
hydros_uart/include/: hydros_uart.hpp  hydros_uart_stream.hpp
hydros_vectornav/: CMakeLists.txt
hydros_vectornav/example/: example.cmake
hydros_vectornav/example/src/: main.cpp  stm32f4xx_it.c
hydros_vectornav/include/: hydros_vectornav.hpp
resources/: CMakeLists.example  CMakePresets.json
